@@ -1,22 +1,0 @@
-
-module glimmer_enmabal
-
-  !*FD The energy and mass-balance model (dummy only at the moment)
-
-contains
-
-	subroutine enmabal_init
-
-    !*FD Dummy subroutine (initialisation)
-
-  end subroutine enmabal_init
-
-  !-------------------------------------
-
- 	subroutine enmabal
-
-    !*FD Dummy subroutine
-
-  end subroutine enmabal
-
-end module glimmer_enmabal
