@@ -1,6 +1,7 @@
 2005-05-16 Ian Rutt
  * Merged latest HEAD revisions into SMB branch
  * Removed SMB code; added compile flags for connection to ENMABAL SMB
+ * Removed dummy code glimmer_enmabal.f90
 	
 2005-05-13 Magnus Hagdorn
  * glide_velo.f90: simplify API of calcbtrc, add sliding param depending on basal melt;
